# em_tt_barter_system

./: README.md  pyproject.toml
ads/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py
ads/static/css/: styles.css
ads/templates/: base.html
ads/templates/ads/: ads_list.html  confirmation.html  create_ad.html  create_proposal.html  edit_ad.html  edit_proposal.html  proposals_list.html
ads/tests/: conftest.py  tests.py
config/: settings.py  urls.py
