[tool.poetry]
name = "em-system"
version = "0.1.0"
description = ""
authors = ["Igor Bezruk <unmayerprog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
djangorestframework = "^3.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
