[tool.poetry]
name = "em-system"
version = "0.1.0"
description = ""
authors = ["Igor Bezruk <unmayerprog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
djangorestframework = "^3.16.0"
django-debug-toolbar = "^5.1.0"
drf-spectacular = "^0.28.0"
pytest = "^8.3.5"
pytest-django = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"